added extra js functionality and HTML feedback

--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
         <!-- Game Screen -->
          <div id="game-screen" class="hidden">
             <h1>STEM Trivia</h1>
-            <div id="question"></div>
+            <p id="question"></p>
             <div id="option-cont"></div>
             <button id="submit-button" class="under-button">Submit</button>
-            <button id="next-button" class="under-button">Next</button>
+            <button id="next-button" class="under-button, hidden">Next</button>
             <button class="home-button">Home</button>
+            <p id="right-wrong"></p>
          </div>
          <!-- Results Screen -->
-        <div id="results-screen">
+        <div id="results-screen" class="hidden">
             <h1>STEM Trivia</h1>
             <p id="feedback"></p>
             <button class="home-button">Home</button>
