added more functionality and questions

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <div id="option-cont"></div>
             <button id="submit-button" class="under-button">Submit</button>
             <button id="next-button" class="under-button, hidden">Next</button>
-            <button class="home-button">Home</button>
+            <button id="home-button1">Home</button>
             <p id="right-wrong"></p>
          </div>
          <!-- Results Screen -->
         <div id="results-screen" class="hidden">
             <h1>STEM Trivia</h1>
             <p id="feedback"></p>
-            <button class="home-button">Home</button>
+            <button id="home-button2">Home</button>
         </div>
     </div>
     <script src="script.js"></script>
